--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,7 @@
 {
-    "name": "Python 3.11.6 with Poetry",
-    "image": "mcr.microsoft.com/devcontainers/python:0-3.11.6",
-    "features": {
-        "ghcr.io/devcontainers/features/poetry:1": {}
-    },
-    "postCreateCommand": "poetry install",
+    "name": "Python 3.11 with Poetry",
+    "image": "mcr.microsoft.com/devcontainers/python:0-3.11-bullseye",
+    "postCreateCommand": "curl -sSL https://install.python-poetry.org | python3 && export PATH=\"$HOME/.local/bin:$PATH\" && poetry install",
     "customizations": {
         "vscode": {
             "extensions": [
