--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "poetry"
 version = "2.2.0.dev0"
 description = "Python dependency management and packaging made easy."
-requires-python = "3.11.6"
+requires-python = ">3.11"
 dependencies = [
     "poetry-core @ git+https://github.com/python-poetry/poetry-core.git",
     "build (>=1.2.1,<2.0.0)",
