--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,8 @@
 {
     "name": "Python 3.11 with Poetry",
     "image": "mcr.microsoft.com/devcontainers/python:0-3.11-bullseye",
-    "postCreateCommand": "curl -sSL https://install.python-poetry.org | python3 && export PATH=\"$HOME/.local/bin:$PATH\" && poetry install",
+    "onCreateCommand": "bash .devcontainer/setup.sh",
+    //"postCreateCommand": "curl -sSL https://install.python-poetry.org | python3 && export PATH=\"$HOME/.local/bin:$PATH\" && poetry install",
     "customizations": {
         "vscode": {
             "extensions": [
