--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
     "name": "Python 3.11 with Poetry",
     "image": "mcr.microsoft.com/devcontainers/python:3.11.6-slim",
+    // Container Configuration
+    // "workspaceFolder": "/workspaces/my-project",
+    "shutdownAction": "stopContainer",
     "onCreateCommand": "bash .devcontainer/setup.sh",
     //"postCreateCommand": "curl -sSL https://install.python-poetry.org | python3 && export PATH=\"$HOME/.local/bin:$PATH\" && poetry install",
     "customizations": {
