--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Python 3.11 with Poetry",
-    "image": "mcr.microsoft.com/devcontainers/python:3.11.6-slim",
+    "image": "python:3.11.6-slim",
     // Container Configuration
     // "workspaceFolder": "/workspaces/my-project",
     "shutdownAction": "stopContainer",
